# NGINX-Reverseproxy

./: .gitignore  CHANGELOG.md  COMPLETION.md  DEV-SETUP.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  management.sh  pyproject.toml  setup-dev.bat  setup-dev.sh  setup.sh
install/: 404.html  catch-all.conf
legacy/: README.md  setup_for_remote_execution.sh
nrp/: __init__.py  cli.py  config.py
nrp/commands/: __init__.py  add.py  completion.py  list_cmd.py  remote_setup.py  remove.py  setup.py  status.py
nrp/core/: __init__.py  certbot.py  nginx.py  validation.py
nrp/templates/: 404.html  catch-all.conf.j2  nginx_custom_port.conf.j2  nginx_standard.conf.j2  temp_http.conf.j2
tests/: __init__.py  test_validation.py
