[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrp"
version = "2.0.0"
description = "NGINX Reverse Proxy Management Tool"
authors = [
    {name = "SoftENGINE IT", email = "info@softengine-it.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["nginx", "reverse-proxy", "ssl", "letsencrypt", "certbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/SoftENGINE-IT/NGINX-Reverseproxy"
Repository = "https://github.com/SoftENGINE-IT/NGINX-Reverseproxy"
Issues = "https://github.com/SoftENGINE-IT/NGINX-Reverseproxy/issues"

[project.scripts]
nrp = "nrp.cli:cli"

[tool.setuptools]
packages = ["nrp", "nrp.commands", "nrp.core"]

[tool.setuptools.package-data]
nrp = ["templates/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
